REMASTER | Manejo de roles en la generación del token para quitar el prefijo ROLE_ y añadir un claim roles (en plural). Manejo de excepciones específicas de JWT (SignatureException, ExpiredJwtException, etc.) en isTokenValid. Reemplazo de RuntimeException por IllegalStateException para errores de lógica interna. Uso de @Slf4j para logging. Propósito: Mejorar la robustez, la seguridad, la claridad de los claims JWT y la observabilidad.