@@ -1,112 +1,92 @@
 package com.ruki.user.security;
 
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException; 
 import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.MalformedJwtException; 
 import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.UnsupportedJwtException; 
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
+import io.jsonwebtoken.security.SignatureException; 
+import lombok.extern.slf4j.Slf4j; 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
-
 import java.security.Key;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors; 
 
 @Service
+@Slf4j 
 public class JwtUtils {
 
-    /*
-        Esto lee la clave secreta que está 
-        ubicada en nuestro application.properties
-    */
     @Value("${jwt.secret}")
     private String secretKey;
 
-    /*
-        Esto lee el tiempo de expiración del 
-        token, que también está ubicado en 
-        nuestro application.properties
-    */
     @Value("${jwt.expiration}")
     private long jwtExpiration;
 
-    /*
-        Extrae el correo (o sea el 'username') 
-        del token del usuario correspondiente
-    */
     public String extractUsername(String token) {
         return extractClaim(token, Claims::getSubject);
     }
 
-    /*
-        Extrae una reclamación específica del 
-        token del usuario correspondiente
-    */
     public <T> T extractClaim(String token, Function<Claims, T> claimsResolver) {
         final Claims claims = extractAllClaims(token);
         return claimsResolver.apply(claims);
     }
 
-    /*
-        Genera un token nuevo para el usuario
-    */
     public String generateToken(UserDetails userDetails) {
         return generateToken(new HashMap<>(), userDetails);
     }
 
     public String generateToken(Map<String, Object> extraClaims, UserDetails userDetails) {
-        
-        /* 
-            Creamos una copia del mapa para evitar 
-            mutar el original (Side Effects)
-        */
+
         Map<String, Object> claimsToSave = new HashMap<>(extraClaims);
 
-        /* 
+        /*
             Extraemos todos los roles de forma segura
         */
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .toList();
+                .collect(Collectors.toList()); 
 
-        claimsToSave.put("roles", roles);
-        
-      
-        /* 
-            Solo agregamos 'role' si realmente hay 
-            uno, evitando valores 'null' en el token
+        /*
+            Asegurarse de que el usuario tenga al menos un rol
         */
-        if (!roles.isEmpty()) {
-            claimsToSave.put("role", roles.get(0));
-        } else {
-            throw new RuntimeException("Error: El usuario " + userDetails.getUsername() + " no tiene roles asignados en la BD.");
+        if (roles.isEmpty()) {
+            log.error("Error: El usuario {} no tiene roles asignados.", userDetails.getUsername());
+            throw new IllegalStateException("El usuario no tiene roles asignados."); // Lanzar una excepción más específica
         }
 
+        /*
+            Añadir el primer rol como "role" y todos los roles como "roles"
+        */
+        claimsToSave.put("role", roles.get(0).replace("ROLE_", "")); 
+        claimsToSave.put("roles", roles.stream().map(r -> r.replace("ROLE_", "")).collect(Collectors.toList())); 
+
         return Jwts.builder()
-                
-            /* 
-                Usamos nuestra copia segura
-            */
-            .setClaims(claimsToSave)
-            .setSubject(userDetails.getUsername())
-            .setIssuedAt(new Date(System.currentTimeMillis()))
-            .setExpiration(new Date(System.currentTimeMillis() + jwtExpiration))
-            .signWith(getSignInKey(), SignatureAlgorithm.HS256)
-            .compact();
+                .setClaims(claimsToSave)
+                .setSubject(userDetails.getUsername())
+                .setIssuedAt(new Date(System.currentTimeMillis()))
+                .setExpiration(new Date(System.currentTimeMillis() + jwtExpiration))
+                .signWith(getSignInKey(), SignatureAlgorithm.HS256)
+                .compact();
     }
 
-    /*
-        Verifica si el token es valido, es decir, si 
-        el correo del token coincide con el correo del usuario
-    */
     public boolean isTokenValid(String token, UserDetails userDetails) {
-        final String username = extractUsername(token);
-        return (username.equals(userDetails.getUsername())) && !isTokenExpired(token);
+        try {
+            final String username = extractUsername(token);
+            return (username.equals(userDetails.getUsername())) && !isTokenExpired(token);
+        } catch (SignatureException | MalformedJwtException | ExpiredJwtException | UnsupportedJwtException | IllegalArgumentException ex) {
+            log.warn("Invalid JWT token: {}", ex.getMessage());
+            return false;
+        }
     }
 
     private boolean isTokenExpired(String token) {
@@ -129,5 +109,4 @@ public class JwtUtils {
         byte[] keyBytes = Decoders.BASE64.decode(secretKey);
         return Keys.hmacShaKeyFor(keyBytes);
     }
-    
 }
